--- a/_config.yml
+++ b/_config.yml
@@ -190,6 +190,17 @@ defaults:
       comments: true  # add comments to all blog posts
       social-share: true # add social media sharing buttons to all blog posts
       readtime: false # add estimated reading time on all blog posts
+
+  -
+    scope:
+      path: ""
+      type: "posts2"
+    values:
+      layout: "post"
+      comments: true  # add comments to all blog posts
+      social-share: true # add social media sharing buttons to all blog posts
+      readtime: false # add estimated reading time on all blog posts
+
   -
     scope:
       path: "" # all files
