--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ author: Tyler Frazier
 
 navbar-links:
   About Me: "aboutme"
-  My Teaching Philosophy: "myphilosophy"
-  My Research Focus: "myfocus"
-  My Institutional Home:
+  My Teaching: "myphilosophy"
+  My Research: "myfocus"
+  Institutional Home:
     - William & Mary: "https://www.wm.edu"
     - Data Science: "https://www.wm.edu/as/data-science/advisors/frazier_t/index.php"
 
