--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ navbar-links:
   My Research: "myfocus"
   Institutional Home:
     - William & Mary: "https://www.wm.edu"
-    - Data Science: "https://www.wm.edu/as/data-science/advisors/frazier_t/index.php"
+    - Data Science: "https://www.wm.edu/as/data-science/"
 
 # --- Logo --- #
 
