--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author: Tyler Frazier
 
 navbar-links:
   About Me: "aboutme"
-  My Teaching: "https://tyler-frazier.github.io/teaching.html"
+  My Teaching: "https://github.com/tyler-frazier/tyler-frazier.github.io/blob/master/teaching.html"
   My Research: "myfocus"
   My CV: "https://tyler-frazier.github.io/website_plus/index.html#resume"
   Institutional Home:
