--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ social-network-links:
   email: "tjfrazier@wm.edu"
 # facebook: deanattali
   github: tyler-frazier
-  twitter: geosimafrica
+# twitter: geosimafrica
   rss: false
 #  reddit: yourname
 #  linkedin: daattali
